--- a/themes/even/layouts/partials/sidebar.html
+++ b/themes/even/layouts/partials/sidebar.html
@@ -3,7 +3,7 @@
   <img src="/img/logo.jpeg" alt="" class="avatar">
 
   <a href="{{ .Site.BaseURL }}" class="author_name">qiubinren</a>
-  <span class="author_job">历史车轮下的螳螂</span>
+  <span class="author_job">历史车轮下哀嚎的后端码农</span>
   <span class="author_bio mbm">一个人的命运啊，当然要靠自我奋斗，但是也要考虑到历史的进程</span>
   <nav class="nav">
     <ul class="nav-list">
